--- a/config.json
+++ b/config.json
@@ -13,5 +13,5 @@
 		"user": "admin",
 		"password_hash": "<enter hash created by ./makepassword.js here in localconfig.json>"
 	}],
-	"note_html": "<div style=\"text-align:center\">Finale! <a href=\"https://www.sportschau.de/die-finals/live/badminton-final4-m-f-finale,livestream-die-finals-badminton-100.html\">Livestream</a></div>"
+	"note_html": "<div style=\"text-align:center\">Saison 2025/2026</div>"
 }
